# aosp

./: .gitignore  Android.bp  BUILD.gn  OWNERS  PRESUBMIT.cfg  PREUPLOAD.cfg  README.md  TEST_MAPPING  ubsan_blocklist.txt  unblocked_terms.txt
chromeos/tests/: BUILD.gn
chromeos/tests/common/: chromeos_config_portal_test.cc  daemon_store_test.cc  random_test.cc
chromeos/tests/runtime/: generated_test_loader_V1_2.cc  generated_test_loader_V1_3.cc  sampledriver_test.cc  sampledriver_xnn_test.cc
nn/: Android.bp  BUILD.gn  README.md  TEST_MAPPING
nn/apex/: AndroidManifest.xml  manifest.json
nn/apex/testing/: Android.bp
nn/chromeos/: daemon_store.h  logger.cpp  logger.h  sampledriver.cpp  sampledriver_util.h  startup.cpp  testrunner.cpp  versioned_drivers.cpp
nn/chromeos/tests/: BUILD.gn
nn/chromeos/tests/common/: includes_test.cc  logger_enum_test.cc
nn/chromeos/tests/runtime/: generated_test_loader.cc  generated_test_loader_V1_0.cc  generated_test_loader_V1_1.cc  generated_test_loader_V1_2.cc  generated_test_loader_V1_3.cc  generated_test_loader_V1_3_cts.cc  sampledriver_test.cc
nn/common/: Android.bp  CpuExecutor.cpp  ExecutionBurstController.cpp  ExecutionBurstServer.cpp  GraphDump.cpp  MetaModel.cpp  OperationResolver.cpp  OperationsUtils.cpp  Utils.cpp  UtilsTest.cpp  ValidateHal.cpp
nn/common/include/: ActivationFunctor.h  CpuExecutor.h  CpuOperationUtils.h  ExecutionBurstController.h  ExecutionBurstServer.h  GraphDump.h  HalInterfaces.h  IndexedShapeWrapper.h  OperationResolver.h  Operations.h  OperationsUtils.h  Tracing.h  Utils.h  ValidateHal.h
nn/common/operations/: Activation.cpp  ArgMinMax.cpp  BidirectionalSequenceLSTM.cpp  BidirectionalSequenceLSTM.h  BidirectionalSequenceRNN.cpp  Broadcast.cpp  Cast.cpp  ChannelShuffle.cpp  Comparisons.cpp  Concatenation.cpp  Conv2D.cpp  DepthwiseConv2D.cpp  Dequantize.cpp  EmbeddingLookup.cpp  EmbeddingLookup.h  EmbeddingLookupSparse.cpp  Exp.cpp  ExpandDims.cpp  ExpandDims.h  FullyConnected.cpp  Gather.cpp  GenerateProposals.cpp  GroupedConv2D.cpp  HalOperation.h  HashtableLookup.cpp  HashtableLookup.h  HashtableLookupTest.cpp  HeatmapMaxKeypoint.cpp  InstanceNormalization.cpp  L2Normalization.cpp  LSHProjection.cpp  LSHProjection.h  LSHProjectionTest.cpp  LSTM.cpp  LSTM.h  LSTMTest.cpp  LogSoftmax.cpp  LogicalAndOr.cpp  LogicalNot.cpp  MaximumMinimum.cpp  (+37 more)
nn/common/random/: Android.bp  philox_random.h  random.cc  random_distributions.h
nn/driver/cache/BlobCache/: BlobCache.cpp  BlobCache.h  BlobCache_test.cpp
nn/driver/cache/nnCache/: nnCache.cpp  nnCache.h
nn/driver/sample/: Android.bp  SampleDriver.cpp  SampleDriver.h  SampleDriverAll.cpp  SampleDriverFloatFast.cpp  SampleDriverFloatSlow.cpp  SampleDriverFloatXNNPACK.cpp  SampleDriverFloatXNNPACK.h  SampleDriverFull.cpp  SampleDriverFull.h  SampleDriverMinimal.cpp  SampleDriverPartial.cpp  SampleDriverPartial.h  SampleDriverQuant.cpp  SampleDriverUtils.h
nn/driver/sample/config/: android.hardware.neuralnetworks@1.3-service-sample-all.xml
nn/extensions/: README.md
nn/extensions/test_vendor/fibonacci/: FibonacciExtension.h
nn/runtime/: Android.bp  BurstBuilder.h  Callbacks.cpp  Callbacks.h  CompilationBuilder.cpp  CompilationBuilder.h  Event.h  ExecutionBuilder.cpp  ExecutionBuilder.h  ExecutionPlan.cpp  ExecutionPlan.h  Manager.cpp  Manager.h  Memory.cpp  Memory.h  ModelArgumentInfo.cpp  ModelArgumentInfo.h  ModelBuilder.cpp  ModelBuilder.h  NeuralNetworks.cpp  TypeManager.cpp  TypeManager.h  VersionedIDevice.h  VersionedInterfaces.cpp  VersionedInterfaces.h  libneuralnetworks.map.txt
nn/runtime/include/: NeuralNetworks.h  NeuralNetworksExtensions.h  NeuralNetworksOEM.h  NeuralNetworksWrapper.h  NeuralNetworksWrapperExtensions.h
nn/runtime/test/: Android.bp  AndroidTest.xml  Bridge.h  GeneratedTestUtils.cpp  GeneratedUtils.cpp  GeneratedUtils.h  TestCompilationCaching.cpp  TestCompliance.cpp  TestCompliance.h  TestControlFlowExecution.cpp  TestExecution.cpp  TestExtensions.cpp  TestGenerated.cpp  TestGenerated.h  TestIntrospectionControl.cpp  TestMain.cpp  TestMemory.cpp  TestMemory.h  TestMemoryDomain.cpp  TestMemoryInternal.cpp  TestNeuralNetworksWrapper.h  TestOpenmpSettings.cpp  TestOperandExtraParams.cpp  TestPartitioning.cpp  TestPartitioningRandom.cpp  TestRemoveDefaultArguments.cpp  TestTrivialModel.cpp  TestUnknownDimensions.cpp  TestUnspecifiedDimensions.cpp  TestValidateModel.cpp  TestValidateOperations.cpp  TestValidation.cpp
nn/runtime/test/android_fuzzing/: Converter.cpp  FuzzHarness.cpp  FuzzTest.cpp  Model.proto
nn/runtime/test/android_fuzzing/corpus/: seed001  seed002  seed003  seed007  seed009  seed011  seed012  seed015  seed017  seed018  seed020  seed021  seed024  seed025  seed026  seed028  seed029  seed032  seed033  seed035  seed038  seed039  seed042  seed044  seed047  seed049  seed050  seed051  seed052  seed054  seed055  seed056  seed057  seed060  seed063  seed064  seed066  seed067  seed071  seed072  (+206 more)
nn/runtime/test/fibonacci_extension/: FibonacciDriver.cpp  FibonacciDriver.h
nn/runtime/test/for-cts/: TestGeneratedOneFile.cpp
nn/runtime/test/fuzzing/: OperationManager.cpp  OperationManager.h  RandomGraphGenerator.cpp  RandomGraphGenerator.h  RandomGraphGeneratorUtils.cpp  RandomGraphGeneratorUtils.h  RandomVariable.cpp  RandomVariable.h  TestRandomGraph.cpp
nn/runtime/test/fuzzing/operation_signatures/: BoundingBox.cpp  Reduce.cpp  (+11 more)
nn/runtime/test/specs/: generate_all_tests.sh  generate_test.sh  generate_vts_test.sh
nn/tools/: build_and_run_benchmark.sh  parse_benchmark.py
nn/tools/api/: NeuralNetworks.t  README.md  generate_api.py  generate_api.sh  types.spec
nn/tools/ion_watcher/: ion_watcher.cpp
nn/tools/systrace_parser/: README.txt  parse_systrace.py
nn/tools/systrace_parser/parser/: aggregate.py  input.py  naming.py  output.py  tracker.py  tree.py
nn/tools/test_generator/: README.md  cts_generator.py  example_generator.py  spec_visualizer.py  test_generator.py  vts_generator.py
nn/tools/test_generator/include/: TestHarness.h
nn/tools/test_generator/test_harness/: Android.bp  TestHarness.cpp
(+1149 files in other folders)
